James Cameron's Avatar, settings for camera stabilisation.

--- a/Sys/GameSettings/ULUS10451.ini
+++ b/Sys/GameSettings/ULUS10451.ini
@@ -3,12 +3,12 @@
 UnitsPerMetre = 1.0
 HudThickness = 0.5
 HudDistance = 2.0
-CameraForward = 0.0
+CameraForward = 1.0
 CameraPitch = 10.0
-AimDistance = 7.0
+AimDistance = 14.0
 ScreenHeight = 2.0
 ScreenThickness = 0.5
-ScreenDistance = 1.5
+ScreenDistance = 2.5
 ScreenRight = 0.0
 ScreenUp = 0.0
 ScreenPitch = 0.0
@@ -19,11 +19,12 @@ TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
 DontClearScreen = False
-CanReadCameraAngles = False
+CanReadCameraAngles = True
+ReadPitch = 90.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 4
-VRIssues = culling, camera angles
+VRIssues = still has culling, camera motion, slowdowns
 
 [VRCheats]
 _C1 reduce culling truck
