Family Guy and Assassin's Creed settings.

--- a/Sys/GameSettings/ULES00601.ini
+++ b/Sys/GameSettings/ULES00601.ini
@@ -19,13 +19,14 @@ TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
 DontClearScreen = True
-CanReadCameraAngles = False
+CanReadCameraAngles = True
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = False
 OverrideClearColor = False
 BackgroundColor = 0
-VRStateId = 4
-VRIssues = Camera angles, imperfect depth layering in start screen
+VRStateId = 5
+VRIssues = imperfect depth layering in start screen
 
 [VRCheats]
 _C1 disable culling
