--- a/Sys/GameSettings/ULUS10455.ini
+++ b/Sys/GameSettings/ULUS10455.ini
@@ -20,6 +20,7 @@ MetroidPrime = 0
 HudOnTop = False
 DontClearScreen = False
 CanReadCameraAngles = False
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 Before3DIsBackground = True
