Update game settings for camera stabilisation.

--- a/Sys/GameSettings/NPEZ00104.ini
+++ b/Sys/GameSettings/NPEZ00104.ini
@@ -20,6 +20,7 @@ MetroidPrime = 0
 HudOnTop = True
 DontClearScreen = False
 CanReadCameraAngles = False
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = False
 Before3DIsBackground = False
