--- a/Sys/GameSettings/ULES00766.ini
+++ b/Sys/GameSettings/ULES00766.ini
@@ -19,8 +19,9 @@ TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
 DontClearScreen = False
-CanReadCameraAngles = False
+CanReadCameraAngles = True
+ReadPitch = 90.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 3
-VRIssues = Culling, camera angles, letterboxing
+VRIssues = Culling, letterboxing, HUD lightening effects
