--- a/Sys/GameSettings/ULUS10063.ini
+++ b/Sys/GameSettings/ULUS10063.ini
@@ -20,10 +20,11 @@ MetroidPrime = 0
 HudOnTop = False
 DontClearScreen = False
 CanReadCameraAngles = False
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 3
-VRIssues = seasickness, camera angles, flickering videos
+VRIssues = seasickness, camera angles, flickering videos, inside-out yaw stabilisation
 
 [VRCheats]
 _C1 disable all culling
