--- a/Sys/GameSettings/ULUS10128.ini
+++ b/Sys/GameSettings/ULUS10128.ini
@@ -19,10 +19,11 @@ TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
 DontClearScreen = False
-CanReadCameraAngles = False
+CanReadCameraAngles = True
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 OverrideClearColor = False
 BackgroundColor = 0
 VRStateId = 3
-VRIssues = Flickering intros (+top left), camera angles, whole map shown, culling
+VRIssues = Flickering intros (+top left), whole map shown, culling
