--- a/Sys/GameSettings/ULUS10566.ini
+++ b/Sys/GameSettings/ULUS10566.ini
@@ -20,6 +20,8 @@ HudOnTop = True
 TelescopeEye = 0
 MetroidPrime = 0
 DontDrawScreenSpace = True
+CanReadCameraAngles = True
+ReadPitch = 0.0
 VRStateId = 4
 VRIssues = Planet's Core sky, Motion sickness, character invisible if too close
 
