--- a/Sys/GameSettings/NPUH10023.ini
+++ b/Sys/GameSettings/NPUH10023.ini
@@ -20,6 +20,7 @@ MetroidPrime = 0
 HudOnTop = False
 DontClearScreen = True
 CanReadCameraAngles = False
+ReadPitch = 180.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 4
