--- a/Sys/GameSettings/ULES00011.ini
+++ b/Sys/GameSettings/ULES00011.ini
@@ -19,5 +19,7 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 DontDrawScreenSpace = False
+CanReadCameraAngles = True
+ReadPitch = 0.0
 VRStateId = 4
-VRIssues = dizzy start of level, culling, tilted menu, curtain at wrong depth, press X to fix camera angle
+VRIssues = dizzy start of level, culling, curtain at wrong depth, yaw stabilisation turns it inside-out
