--- a/Sys/GameSettings/ULUS10245.ini
+++ b/Sys/GameSettings/ULUS10245.ini
@@ -19,8 +19,9 @@ TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
 DontClearScreen = False
-CanReadCameraAngles = False
+CanReadCameraAngles = True
+ReadPitch = 90.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 3
-VRIssues = shadow, map, camera angles, title scale
+VRIssues = shadow, map, title scale
