--- a/Sys/GameSettings/ULUS10505.ini
+++ b/Sys/GameSettings/ULUS10505.ini
@@ -19,14 +19,15 @@ TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
 DontClearScreen = True
-CanReadCameraAngles = False
+CanReadCameraAngles = True
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = 0
-VRStateId = 2
-VRIssues = Camera angles, near sky, z-fighting
+VRStateId = 3
+VRIssues = near sky, z-fighting, invisible menu text
 
 [VRCheats]
 _C1 disable some culling
