Update game settings for fixed inside out bug.

--- a/Sys/GameSettings/ULUS10063.ini
+++ b/Sys/GameSettings/ULUS10063.ini
@@ -24,7 +24,7 @@ ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 3
-VRIssues = seasickness, camera angles, flickering videos, inside-out yaw stabilisation
+VRIssues = seasickness, camera angles, flickering videos
 
 [VRCheats]
 _C1 disable all culling
