--- a/Sys/GameSettings/UCAS40021.ini
+++ b/Sys/GameSettings/UCAS40021.ini
@@ -22,4 +22,4 @@ DontDrawScreenSpace = False
 CanReadCameraAngles = True
 ReadPitch = 0.0
 VRStateId = 4
-VRIssues = dizzy start of level, culling, curtain at wrong depth, yaw stabilisation turns it inside-out
+VRIssues = dizzy start of level, culling, curtain at wrong depth, yaw stabilisation doesn't work
