New settings for DoA Paradise, Gitaroo Man, Ultimate Ghosts and Goblins, MGS Peace Walker. And updated settings for other games.

--- a/Sys/GameSettings/ULES01422.ini
+++ b/Sys/GameSettings/ULES01422.ini
@@ -20,6 +20,7 @@ MetroidPrime = 0
 HudOnTop = False
 DontClearScreen = False
 CanReadCameraAngles = False
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 2
