--- a/Sys/GameSettings/ULUS10156.ini
+++ b/Sys/GameSettings/ULUS10156.ini
@@ -19,7 +19,8 @@ TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
 DontClearScreen = False
-CanReadCameraAngles = False
+CanReadCameraAngles = True
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 3
