--- a/Sys/GameSettings/ULUS10158.ini
+++ b/Sys/GameSettings/ULUS10158.ini
@@ -19,8 +19,9 @@ TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
 DontClearScreen = False
-CanReadCameraAngles = False
+CanReadCameraAngles = True
+ReadPitch = 180.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 3
-VRIssues = culling
+VRIssues = culling, near skybox
