--- a/Sys/GameSettings/ULUS10207.ini
+++ b/Sys/GameSettings/ULUS10207.ini
@@ -1,14 +1,14 @@
-﻿# NPJH50701 - Sword Art Online Infinity Moment - ソードアート・オンライン -ｲﾝﾌｨﾆﾃｨ･ﾓｰﾒﾝﾄ-
+﻿# ULUS10207 - GITAROO MAN Lives!
 [VR]
-UnitsPerMetre = 1.0
-HudThickness = 0.5
+UnitsPerMetre = 50.0
+HudThickness = 5.0
 HudDistance = 2.0
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
-ScreenHeight = 2.0
-ScreenThickness = 0.5
-ScreenDistance = 1.0
+ScreenHeight = 1.0
+ScreenThickness = 0.6
+ScreenDistance = 1.5
 ScreenRight = 0.0
 ScreenUp = 0.0
 ScreenPitch = 0.0
@@ -17,11 +17,16 @@ Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
-HudOnTop = False
+HudOnTop = True
 DontClearScreen = False
 CanReadCameraAngles = True
 ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
-VRStateId = 4
-VRIssues = Extremely confusing Japanese interface
+Before3DIsBackground = False
+OverrideClearColor = False
+BackgroundColor = -16777216
+CPUSpeed = 0
+VRState = 4
+VRIssues = 
+ 
