--- a/Sys/GameSettings/ULUS10472.ini
+++ b/Sys/GameSettings/ULUS10472.ini
@@ -19,11 +19,12 @@ TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
 DontClearScreen = False
-CanReadCameraAngles = False
+CanReadCameraAngles = True
+ReadPitch = -90.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 VRStateId = 3
-VRIssues = Flickering HUD and background
+VRIssues = Flickering HUD and background, camera too far, can see backstage
 
 [VRCheats]
 _C1 disable all culling
