--- a/Sys/GameSettings/NPJH50045.ini
+++ b/Sys/GameSettings/NPJH50045.ini
@@ -1,14 +1,14 @@
-﻿# NPJH50701 - Sword Art Online Infinity Moment - ソードアート・オンライン -ｲﾝﾌｨﾆﾃｨ･ﾓｰﾒﾝﾄ-
+﻿# NPJH50045 - METAL GEAR SOLID PEACE WALKER
 [VR]
-UnitsPerMetre = 1.0
-HudThickness = 0.5
-HudDistance = 2.0
+UnitsPerMetre = 1000.0
+HudThickness = 1.0
+HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
 ScreenHeight = 2.0
 ScreenThickness = 0.5
-ScreenDistance = 1.0
+ScreenDistance = 1.5
 ScreenRight = 0.0
 ScreenUp = 0.0
 ScreenPitch = 0.0
@@ -17,11 +17,15 @@ Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
-HudOnTop = False
+HudOnTop = True
 DontClearScreen = False
 CanReadCameraAngles = True
 ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
-VRStateId = 4
-VRIssues = Extremely confusing Japanese interface
+Before3DIsBackground = False
+OverrideClearColor = False
+BackgroundColor = -16777216
+CPUSpeed = 0
+VRStateId = 2
+VRIssues = HUD makes things 2D, culling, rain effects
