--- a/Sys/GameSettings/UCJS10085.ini
+++ b/Sys/GameSettings/UCJS10085.ini
@@ -1,26 +1,28 @@
-﻿# UCJS10085 - ＢＬＥＡＣＨ～ソウル・カーニバル～
+﻿# UCJS10085 - Bleach Soul Carnival - ソウル・カーニバル
 [VR]
-UnitsPerMetre = 0.960000
-HudThickness = 0.500000
-HudDistance = 1.500000
-CameraForward = 0.000000
-CameraPitch = 0.000000
-AimDistance = 3.000000
-ScreenHeight = 3.800000
-ScreenThickness = 1.000000
-ScreenDistance = 3.000000
-ScreenRight = 0.000000
-ScreenUp = 0.000000
-ScreenPitch = 0.000000
-TelescopeMaxFOV = 0.000000
+UnitsPerMetre = 1.0
+HudThickness = 0.5
+HudDistance = 1.5
+CameraForward = 0.0
+CameraPitch = 0.0
+AimDistance = 3.0
+ScreenHeight = 3.8
+ScreenThickness = 20.0
+ScreenDistance = 3.0
+ScreenRight = 0.0
+ScreenUp = 0.0
+ScreenPitch = 0.0
+TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
+Invert2DThroughDepth = True
+Invert2DOrthoDepth = True
 DontClearScreen = False
 CanReadCameraAngles = True
-ReadPitch = 0.000000
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 Before3DIsBackground = True
@@ -28,4 +30,4 @@ OverrideClearColor = False
 BackgroundColor = -16777216
 CPUSpeed = 0
 VRStateId = 3
-VRIssues = 2D game, almost no depth, arrow icons broken, inverted depth in particle effects
+VRIssues = 2D game, little depth, arrow icons broken
