Update game settings for release.

--- a/Sys/GameSettings/NPEZ00044.ini
+++ b/Sys/GameSettings/NPEZ00044.ini
@@ -22,6 +22,7 @@ Invert2DOrthoDepth = True
 Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = False
 Before3DIsBackground = False
