--- a/Sys/GameSettings/NPEZ00104.ini
+++ b/Sys/GameSettings/NPEZ00104.ini
@@ -18,6 +18,8 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
 ReadPitch = 0.0
