--- a/Sys/GameSettings/NPJH50065.ini
+++ b/Sys/GameSettings/NPJH50065.ini
@@ -1,5 +1,4 @@
 # ULUS10566 - DISSIDIA Final Fantasy Universal Tuning
-
 [VR]
 UnitsPerMetre = 1.0
 HudThickness = 0.5
@@ -16,9 +15,19 @@ ScreenPitch = 0.0
 TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
-HudOnTop = True
 TelescopeEye = 0
 MetroidPrime = 0
+HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
+DontClearScreen = False
+CanReadCameraAngles = True
+ReadPitch = 0.0
+DetectSkybox = False
 DontDrawScreenSpace = True
+Before3DIsBackground = False
+OverrideClearColor = False
+BackgroundColor = -16777216
+CPUSpeed = 0
 VRStateId = 4
 VRIssues = Planet's Core sky, Motion sickness, character invisible if too close
