--- a/Sys/GameSettings/NPEZ00081.ini
+++ b/Sys/GameSettings/NPEZ00081.ini
@@ -18,6 +18,8 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
 ReadPitch = 0.000000
