--- a/Sys/GameSettings/ULES01505.ini
+++ b/Sys/GameSettings/ULES01505.ini
@@ -1,4 +1,4 @@
-# NPJH50065, ULJM05550 - DISSIDIA Final Fantasy Universal Tuning
+# ULUS10566, ULES01505 - Dissidia 012: Duodecim Final Fantasy
 [VR]
 UnitsPerMetre = 1.0
 HudThickness = 0.5
