--- a/Sys/GameSettings/NPEZ00118.ini
+++ b/Sys/GameSettings/NPEZ00118.ini
@@ -1,14 +1,14 @@
-﻿# NPUH10006, NPEH00003, NPJH00002 - Brain Challenge
+﻿# NPUZ00033, NPEZ00118 - MONOPOLY
 [VR]
-UnitsPerMetre = 30.000000
-HudThickness = 0.500000
-HudDistance = 1.670000
+UnitsPerMetre = 70.000000
+HudThickness = 0.100000
+HudDistance = 0.450000
 CameraForward = 0.000000
-CameraPitch = 0.000000
-AimDistance = 1.670000
-ScreenHeight = 2.000000
+CameraPitch = 90.000000
+AimDistance = 1.000000
+ScreenHeight = 1.000000
 ScreenThickness = 0.500000
-ScreenDistance = 1.500000
+ScreenDistance = 1.300000
 ScreenRight = 0.000000
 ScreenUp = 0.000000
 ScreenPitch = 0.000000
@@ -17,17 +17,17 @@ Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
-HudOnTop = False
+HudOnTop = True
 Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
-ReadPitch = 0.000000
+ReadPitch = 0.0
 DetectSkybox = False
-DontDrawScreenSpace = True
-Before3DIsBackground = True
+DontDrawScreenSpace = False
+Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = -16777216
 CPUSpeed = 0
-VRStateId = 3
-VRIssues = 2D game rendered as 3D object. Freelook back for better view.
+VRStateId = 2
+VRIssues = camera angles, culling, inconsistent scale
