--- a/Sys/GameSettings/NPJH50701.ini
+++ b/Sys/GameSettings/NPJH50701.ini
@@ -18,10 +18,16 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = True
 ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
+Before3DIsBackground = False
+OverrideClearColor = False
+BackgroundColor = -16777216
+CPUSpeed = 0
 VRStateId = 4
 VRIssues = Extremely confusing Japanese interface
