--- a/Sys/GameSettings/NPUH10024.ini
+++ b/Sys/GameSettings/NPUH10024.ini
@@ -18,10 +18,16 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
 ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
+Before3DIsBackground = False
+OverrideClearColor = False
+BackgroundColor = -16777216
+CPUSpeed = 0
 VRStateId = 2
 VRIssues = Bad floor culling, motion sickness in menus, garage mech rendering
