--- a/Sys/GameSettings/NPUZ00020.ini
+++ b/Sys/GameSettings/NPUZ00020.ini
@@ -18,8 +18,11 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
+ReadPitch = 0.000000
 DetectSkybox = False
 DontDrawScreenSpace = False
 Before3DIsBackground = False
