--- a/Sys/GameSettings/NPUZ00033.ini
+++ b/Sys/GameSettings/NPUZ00033.ini
@@ -1,4 +1,4 @@
-﻿# NPUZ00033 - MONOPOLY
+﻿# NPUZ00033, NPEZ00118 - MONOPOLY
 [VR]
 UnitsPerMetre = 70.000000
 HudThickness = 0.100000
@@ -18,6 +18,8 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
 ReadPitch = 0.0
