--- a/Sys/GameSettings/UCKS45007.ini
+++ b/Sys/GameSettings/UCKS45007.ini
@@ -1,5 +1,4 @@
 ﻿# ULUS10017, ULES00011, UCAS40021, UCJS10011, UCKS45007: Archer Maclean's Mercury / Hydrium (Hg)
-
 [VR]
 UnitsPerMetre = 10.0
 HudThickness = 0.500000
@@ -18,8 +17,17 @@ Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
-DontDrawScreenSpace = False
+HudOnTop = False
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
+DontClearScreen = False
 CanReadCameraAngles = True
 ReadPitch = 0.0
+DetectSkybox = False
+DontDrawScreenSpace = False
+Before3DIsBackground = False
+OverrideClearColor = False
+BackgroundColor = -16777216
+CPUSpeed = 0
 VRStateId = 4
 VRIssues = dizzy start of level, culling, curtain at wrong depth, yaw stabilisation doesn't work
