--- a/Sys/GameSettings/ULUS10566.ini
+++ b/Sys/GameSettings/ULUS10566.ini
@@ -1,5 +1,4 @@
-# ULUS10566 - DISSIDIA duodecim Final Fantasy 12
-
+# ULUS10566, ULES01505 - Dissidia 012: Duodecim Final Fantasy
 [VR]
 UnitsPerMetre = 1.0
 HudThickness = 0.5
@@ -16,12 +15,20 @@ ScreenPitch = 0.0
 TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
-HudOnTop = True
 TelescopeEye = 0
 MetroidPrime = 0
-DontDrawScreenSpace = True
+HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
+DontClearScreen = False
 CanReadCameraAngles = True
 ReadPitch = 0.0
+DetectSkybox = False
+DontDrawScreenSpace = True
+Before3DIsBackground = False
+OverrideClearColor = False
+BackgroundColor = -16777216
+CPUSpeed = 0
 VRStateId = 4
 VRIssues = Planet's Core sky, Motion sickness, character invisible if too close
 
