Update regions for more game settings.

--- a/Sys/GameSettings/UCAS40063.ini
+++ b/Sys/GameSettings/UCAS40063.ini
@@ -1,12 +1,12 @@
-﻿# UCES00010 - Ape Academy
+﻿# UCET00357, UCES00304, UCUS98662, UCJS10041, UCKS45020, UCAS40063, UCED90007, UCJB98011 - LocoRoco
 [VR]
-UnitsPerMetre = 100.000000
-HudThickness = 0.000000
-HudDistance = 0.300000
+UnitsPerMetre = 1.000000
+HudThickness = 0.500000
+HudDistance = 1.500000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
-ScreenHeight = 2.000000
+ScreenHeight = 1.500000
 ScreenThickness = 0.500000
 ScreenDistance = 1.500000
 ScreenRight = 0.000000
@@ -24,10 +24,10 @@ DontClearScreen = False
 CanReadCameraAngles = False
 ReadPitch = 0.0
 DetectSkybox = False
-DontDrawScreenSpace = True
+DontDrawScreenSpace = False
 Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = -16777216
 CPUSpeed = 0
-VRStateId = 2
-VRIssues = HUD background blocks scene
+VRStateId = 1
+VRIssues = not sure what is happening
