--- a/Sys/GameSettings/UCES00302.ini
+++ b/Sys/GameSettings/UCES00302.ini
@@ -18,9 +18,16 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
+Before3DIsBackground = False
+OverrideClearColor = False
+BackgroundColor = -16777216
+CPUSpeed = 0
 VRStateId = 3
 VRIssues = HUD always rendered in front of ape
