--- a/Sys/GameSettings/UCJS10082.ini
+++ b/Sys/GameSettings/UCJS10082.ini
@@ -1,4 +1,4 @@
-﻿# UCJS10082 - BLEACH ヒート・ザ・ソウル５
+﻿# UCJS10082 - BLEACH Heat The Soul 5 - ヒート・ザ・ソウル５
 [VR]
 UnitsPerMetre = 0.960000
 HudThickness = 0.600000
@@ -19,6 +19,8 @@ TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
 DontClearScreen = False
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 CanReadCameraAngles = True
 ReadPitch = 0.000000
 DetectSkybox = False
