--- a/Sys/GameSettings/UCUS98612.ini
+++ b/Sys/GameSettings/UCUS98612.ini
@@ -27,7 +27,7 @@ OverrideClearColor = False
 BackgroundColor = -16777216
 CPUSpeed = 0
 VRStateId = 1
-VRIssues = Crashes when starting a race.
+VRIssues = 64bit version crashes when starting, use 32bit version.
 
 [VRCheats]
 _C0 Force 60 FPS
