--- a/Sys/GameSettings/UCKS45032.ini
+++ b/Sys/GameSettings/UCKS45032.ini
@@ -1,33 +1,33 @@
-﻿# UCJS10008, UCJS18005, UCAS40011 - BLEACH Heat The Soul - ヒート・ザ・ソウル
+﻿# UCES00422, ULJS00080, UCAS40113, UCAS40119, UCKS45032 - RIDGE RACER 2
 [VR]
-UnitsPerMetre = 1.0
-HudThickness = 0.5
-HudDistance = 1.5
+UnitsPerMetre = 1000.0
+HudThickness = 0.1
+HudDistance = 1.0
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
-ScreenHeight = 3.4
+ScreenHeight = 1.7
 ScreenThickness = 0.5
-ScreenDistance = 3.0
+ScreenDistance = 2.0
 ScreenRight = 0.0
-ScreenUp = -0.1
+ScreenUp = 0.0
 ScreenPitch = 0.0
 TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
-HudOnTop = True
+HudOnTop = False
 Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
-DontClearScreen = False
-CanReadCameraAngles = True
+DontClearScreen = True
+CanReadCameraAngles = False
 ReadPitch = 0.0
 DetectSkybox = False
-DontDrawScreenSpace = False
-Before3DIsBackground = True
+DontDrawScreenSpace = True
+Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = -16777216
 CPUSpeed = 0
-VRStateId = 4
-VRIssues = Camera motion, culling
+VRStateId = 1
+VRIssues = can't see anything once race starts
