Update game settings for different regions (and MinFOV).

--- a/Sys/GameSettings/NPJH50701.ini
+++ b/Sys/GameSettings/NPJH50701.ini
@@ -6,6 +6,7 @@ HudDistance = 2.0
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 2.0
 ScreenThickness = 0.5
 ScreenDistance = 1.0
