--- a/Sys/GameSettings/NPUH10006.ini
+++ b/Sys/GameSettings/NPUH10006.ini
@@ -6,6 +6,7 @@ HudDistance = 1.670000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 1.670000
+MinFOV = 0.0
 ScreenHeight = 2.000000
 ScreenThickness = 0.500000
 ScreenDistance = 1.500000
