--- a/Sys/GameSettings/NPUH10023.ini
+++ b/Sys/GameSettings/NPUH10023.ini
@@ -6,6 +6,7 @@ HudDistance = 3
 CameraForward = 2.5
 CameraPitch = 0.0
 AimDistance = 40.0
+MinFOV = 0.0
 ScreenHeight = 1.0
 ScreenThickness = 0.2
 ScreenDistance = 1.5
