--- a/Sys/GameSettings/NPUH10024.ini
+++ b/Sys/GameSettings/NPUH10024.ini
@@ -6,6 +6,7 @@ HudDistance = 4.000000
 CameraForward = 3.000000
 CameraPitch = 0.000000
 AimDistance = 40.000000
+MinFOV = 0.0
 ScreenHeight = 4.000000
 ScreenThickness = 0.500000
 ScreenDistance = 3.000000
