--- a/Sys/GameSettings/UCAS40021.ini
+++ b/Sys/GameSettings/UCAS40021.ini
@@ -6,6 +6,7 @@ HudDistance = 0.700000
 CameraForward = -0.400000
 CameraPitch = 35.000000
 AimDistance = 7.000000
+MinFOV = 0.0
 ScreenHeight = 2.000000
 ScreenThickness = 0.500000
 ScreenDistance = 1.500000
