--- a/Sys/GameSettings/UCAS40265.ini
+++ b/Sys/GameSettings/UCAS40265.ini
@@ -1,24 +1,24 @@
-﻿# NPEZ00140, NPUZ00056 - THETERMINATOR
+﻿# UCUS98632, UCAS40265, UCES01245, UCJS10100, UCUS98632 - Gran Turismo®
 [VR]
 UnitsPerMetre = 1.0
 HudThickness = 0.5
 HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 0.0
-AimDistance = 3.0
+AimDistance = 7.0
 MinFOV = 0.0
-ScreenHeight = 17.0
+ScreenHeight = 1.0
 ScreenThickness = 0.5
-ScreenDistance = 15.0
+ScreenDistance = 1.5
 ScreenRight = 0.0
-ScreenUp = 14.0
-ScreenPitch = 60.0
+ScreenUp = 0.0
+ScreenPitch = 0.0
 TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
-HudOnTop = True
+HudOnTop = False
 Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
 DontClearScreen = False
@@ -28,7 +28,7 @@ DetectSkybox = False
 DontDrawScreenSpace = False
 Before3DIsBackground = False
 OverrideClearColor = False
-BackgroundColor = -16777216
+BackgroundColor = 0
 CPUSpeed = 0
 VRStateId = 3
-VRIssues = 2D game, no depth, culling
+VRIssues = in-car view doesn't work any more, minor viewport issues, partial skybox
