--- a/Sys/GameSettings/UCJS10106.ini
+++ b/Sys/GameSettings/UCJS10106.ini
@@ -6,6 +6,7 @@ HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 3.0
+MinFOV = 0.0
 ScreenHeight = 5.0
 ScreenThickness = 20.0
 ScreenDistance = 3.0
