--- a/Sys/GameSettings/UCUS98612.ini
+++ b/Sys/GameSettings/UCUS98612.ini
@@ -1,11 +1,12 @@
-﻿# UCUS98612 - Wipeout Pure
+﻿# UCUS98612, UCES00001, UCAS40012, UCJS10007, UCKS45008, ULJM05105 - Wipeout Pure
 [VR]
-UnitsPerMetre = 1.000000
-HudThickness = 0.100000
-HudDistance = 1.600000
-CameraForward = 0.000000
-CameraPitch = 0.000000
-AimDistance = 7.000000
+UnitsPerMetre = 1.0
+HudThickness = 0.5
+HudDistance = 7.0
+CameraForward = -1.0
+CameraPitch = 0.0
+AimDistance = 2.0
+MinFOV = 40.0
 ScreenHeight = 1.900000
 ScreenThickness = 0.100000
 ScreenDistance = 2.100000
@@ -18,16 +19,19 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = False
 Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = -16777216
 CPUSpeed = 0
-VRStateId = 1
-VRIssues = 64bit version crashes when starting, use 32bit version.
+VRStateId = 5
+VRIssues = 64bit version crashes when starting, use 32bit version. HUD is a bit wide.
 
 [VRCheats]
 _C0 Force 60 FPS
