--- a/Sys/GameSettings/ULES00183.ini
+++ b/Sys/GameSettings/ULES00183.ini
@@ -1,4 +1,4 @@
-﻿# ULES00183 - Star Wars Battlefront II
+﻿# ULES00183, ULUS10053, ULAS42037, ULJM05060 - Star Wars Battlefront II
 [VR]
 UnitsPerMetre = 1.000000
 HudThickness = 0.100000
@@ -6,6 +6,7 @@ HudDistance = 1.000000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
+MinFOV = 0.0
 ScreenHeight = 1.700000
 ScreenThickness = 0.500000
 ScreenDistance = 2.000000
@@ -18,8 +19,11 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 Before3DIsBackground = False
