--- a/Sys/GameSettings/ULKS46023.ini
+++ b/Sys/GameSettings/ULKS46023.ini
@@ -1,15 +1,15 @@
-﻿# UCET00357, UCES00304, UCUS98662, UCJS10041, UCKS45020, UCAS40063, UCED90007, UCJS10041, UCJB98011 - LocoRoco
+﻿# ULES00126, ULUS10037, ULKS46023 - Virtua Tennis: World Tour
 [VR]
-UnitsPerMetre = 1.000000
-HudThickness = 0.500000
-HudDistance = 1.500000
-CameraForward = 0.000000
-CameraPitch = 0.000000
+UnitsPerMetre = 10.000000
+HudThickness = 0.600000
+HudDistance = 2.000000
+CameraForward = 5.000000
+CameraPitch = 20.000000
 AimDistance = 7.000000
 MinFOV = 0.0
-ScreenHeight = 1.500000
-ScreenThickness = 0.500000
-ScreenDistance = 1.500000
+ScreenHeight = 1.900000
+ScreenThickness = 0.100000
+ScreenDistance = 2.100000
 ScreenRight = 0.000000
 ScreenUp = 0.000000
 ScreenPitch = 0.000000
@@ -30,5 +30,5 @@ Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = -16777216
 CPUSpeed = 0
-VRStateId = 1
-VRIssues = not sure what is happening
+VRStateID = 3
+VRIssues = camera positions, culling, z-fighting
