--- a/Sys/GameSettings/NPEZ00044.ini
+++ b/Sys/GameSettings/NPEZ00044.ini
@@ -6,6 +6,7 @@ HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 8.0
 ScreenThickness = 0.0
 ScreenDistance = 6.0
