--- a/Sys/GameSettings/NPEZ00081.ini
+++ b/Sys/GameSettings/NPEZ00081.ini
@@ -6,6 +6,7 @@ HudDistance = 1.500000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
+MinFOV = 0.0
 ScreenHeight = 22.000000
 ScreenThickness = 0.000000
 ScreenDistance = 20.000000
