--- a/Sys/GameSettings/NPEZ00104.ini
+++ b/Sys/GameSettings/NPEZ00104.ini
@@ -6,6 +6,7 @@ HudDistance = 0.900000
 CameraForward = 0.000000
 CameraPitch = 10.000000
 AimDistance = 3.000000
+MinFOV = 0.0
 ScreenHeight = 1.000000
 ScreenThickness = 0.500000
 ScreenDistance = 1.300000
