--- a/Sys/GameSettings/NPHG00002.ini
+++ b/Sys/GameSettings/NPHG00002.ini
@@ -6,6 +6,7 @@ HudDistance = 1.8
 CameraForward = 0.1
 CameraPitch = 0.0
 AimDistance = 1.8
+MinFOV = 0.0
 ScreenHeight = 1.8
 ScreenThickness = 0.6
 ScreenDistance = 2.0
