--- a/Sys/GameSettings/NPUZ00010.ini
+++ b/Sys/GameSettings/NPUZ00010.ini
@@ -6,6 +6,7 @@ HudDistance = 1.500000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
+MinFOV = 0.0
 ScreenHeight = 5.000000
 ScreenThickness = 1.000000
 ScreenDistance = 4.000000
