--- a/Sys/GameSettings/NPUZ00033.ini
+++ b/Sys/GameSettings/NPUZ00033.ini
@@ -6,6 +6,7 @@ HudDistance = 0.450000
 CameraForward = 0.000000
 CameraPitch = 90.000000
 AimDistance = 1.000000
+MinFOV = 0.0
 ScreenHeight = 1.000000
 ScreenThickness = 0.500000
 ScreenDistance = 1.300000
