--- a/Sys/GameSettings/UCES00302.ini
+++ b/Sys/GameSettings/UCES00302.ini
@@ -6,6 +6,7 @@ HudDistance = 1.500000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
+MinFOV = 0.0
 ScreenHeight = 2.000000
 ScreenThickness = 0.500000
 ScreenDistance = 1.500000
