--- a/Sys/GameSettings/UCES01401.ini
+++ b/Sys/GameSettings/UCES01401.ini
@@ -6,6 +6,7 @@ HudDistance = 1.000000
 CameraForward = -6.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
+MinFOV = 0.0
 ScreenHeight = 310.333344
 ScreenThickness = 0.600000
 ScreenDistance = 130.000061
