--- a/Sys/GameSettings/UCJS10008.ini
+++ b/Sys/GameSettings/UCJS10008.ini
@@ -6,6 +6,7 @@ HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 3.4
 ScreenThickness = 0.5
 ScreenDistance = 3.0
