--- a/Sys/GameSettings/UCJS10017.ini
+++ b/Sys/GameSettings/UCJS10017.ini
@@ -6,6 +6,7 @@ HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.000000
+MinFOV = 0.0
 ScreenHeight = 1.200000
 ScreenThickness = 0.500000
 ScreenDistance = 1.300000
