--- a/Sys/GameSettings/UCJS10042.ini
+++ b/Sys/GameSettings/UCJS10042.ini
@@ -6,6 +6,7 @@ HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 1.2
 ScreenThickness = 0.5
 ScreenDistance = 1.3
