--- a/Sys/GameSettings/UCKS45032.ini
+++ b/Sys/GameSettings/UCKS45032.ini
@@ -6,6 +6,7 @@ HudDistance = 1.0
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 1.7
 ScreenThickness = 0.5
 ScreenDistance = 2.0
