--- a/Sys/GameSettings/ULES00126.ini
+++ b/Sys/GameSettings/ULES00126.ini
@@ -1,4 +1,4 @@
-﻿# ULES00126 - Virtua Tennis: World Tour
+﻿# ULES00126, ULUS10037, ULKS46023 - Virtua Tennis: World Tour
 [VR]
 UnitsPerMetre = 10.000000
 HudThickness = 0.600000
@@ -6,6 +6,7 @@ HudDistance = 2.000000
 CameraForward = 5.000000
 CameraPitch = 20.000000
 AimDistance = 7.000000
+MinFOV = 0.0
 ScreenHeight = 1.900000
 ScreenThickness = 0.100000
 ScreenDistance = 2.100000
@@ -18,8 +19,11 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = False
 Before3DIsBackground = False
