--- a/Sys/GameSettings/ULJM05060.ini
+++ b/Sys/GameSettings/ULJM05060.ini
@@ -1,15 +1,15 @@
-﻿# UCET00357, UCES00304, UCUS98662, UCJS10041, UCKS45020, UCAS40063, UCED90007, UCJS10041, UCJB98011 - LocoRoco
+﻿# ULES00183, ULUS10053, ULAS42037, ULJM05060 - Star Wars Battlefront II
 [VR]
 UnitsPerMetre = 1.000000
-HudThickness = 0.500000
-HudDistance = 1.500000
+HudThickness = 0.100000
+HudDistance = 1.000000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
 MinFOV = 0.0
-ScreenHeight = 1.500000
+ScreenHeight = 1.700000
 ScreenThickness = 0.500000
-ScreenDistance = 1.500000
+ScreenDistance = 2.000000
 ScreenRight = 0.000000
 ScreenUp = 0.000000
 ScreenPitch = 0.000000
@@ -18,17 +18,17 @@ Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
-HudOnTop = True
+HudOnTop = False
 Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
 ReadPitch = 0.0
 DetectSkybox = False
-DontDrawScreenSpace = False
+DontDrawScreenSpace = True
 Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = -16777216
 CPUSpeed = 0
-VRStateId = 1
-VRIssues = not sure what is happening
+VRStateId = 2
+VRIssues = distant HUD, black water, still some culling
