--- a/Sys/GameSettings/ULJM05105.ini
+++ b/Sys/GameSettings/ULJM05105.ini
@@ -1,15 +1,15 @@
-﻿# ELF000000 - cube.elf
+﻿# UCUS98612, UCES00001, UCAS40012, UCJS10007, UCKS45008, ULJM05105 - Wipeout Pure
 [VR]
-UnitsPerMetre = 10.000000
-HudThickness = 0.500000
-HudDistance = 0.000000
-CameraForward = -0.500000
-CameraPitch = 20.000000
-AimDistance = 500.000000
-MinFOV = 0.0
-ScreenHeight = 3.000000
-ScreenThickness = 0.500000
-ScreenDistance = 3.500000
+UnitsPerMetre = 1.0
+HudThickness = 0.5
+HudDistance = 7.0
+CameraForward = -1.0
+CameraPitch = 0.0
+AimDistance = 2.0
+MinFOV = 40.0
+ScreenHeight = 1.900000
+ScreenThickness = 0.100000
+ScreenDistance = 2.100000
 ScreenRight = 0.000000
 ScreenUp = 0.000000
 ScreenPitch = 0.000000
@@ -26,9 +26,9 @@ CanReadCameraAngles = False
 ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = False
-Before3DIsBackground = False
+Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = -16777216
 CPUSpeed = 0
-VRStateId = 3
-VRIssues = background is invisible (was HUD)
+VRStateId = 5
+VRIssues = 64bit version crashes when starting, use 32bit version. HUD is a bit wide.
