--- a/Sys/GameSettings/ULUS10363.ini
+++ b/Sys/GameSettings/ULUS10363.ini
@@ -6,6 +6,7 @@ HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 1.8
 ScreenThickness = 0.6
 ScreenDistance = 2.0
