All default settings updated for all regions.

--- a/Sys/GameSettings/NPEH00031.ini
+++ b/Sys/GameSettings/NPEH00031.ini
@@ -1,15 +1,15 @@
-﻿# ULUS10248, ULES00813 - SHReK the THiRD™
+﻿# ULUS10451, NPEH00031, ULES01357 - James Cameron's AVATAR™: THE GAME
 [VR]
-UnitsPerMetre = 0.5
-HudThickness = 0.1
-HudDistance = 1.5
+UnitsPerMetre = 1.0
+HudThickness = 0.5
+HudDistance = 2.0
 CameraForward = 1.0
-CameraPitch = 15.0
-AimDistance = 7.0
+CameraPitch = 10.0
+AimDistance = 14.0
 MinFOV = 0.0
 ScreenHeight = 2.0
-ScreenThickness = 0.1
-ScreenDistance = 2.0
+ScreenThickness = 0.5
+ScreenDistance = 2.5
 ScreenRight = 0.0
 ScreenUp = 0.0
 ScreenPitch = 0.0
@@ -18,22 +18,17 @@ Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
-HudOnTop = True
+HudOnTop = False
 Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
 DontClearScreen = False
-CanReadCameraAngles = False
-ReadPitch = 0.0
+CanReadCameraAngles = True
+ReadPitch = 90.0
 DetectSkybox = False
 DontDrawScreenSpace = True
 Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
-VRStateID = 4
-VRIssues = camera angles
-
-[VRCheats]
-_C1 disable culling
-_L 0x202115F8 0x03E00008
-_L 0x202115FC 0x20020000
+VRStateId = 4
+VRIssues = culling, camera motion, slowdowns
