--- a/Sys/GameSettings/ULES00223.ini
+++ b/Sys/GameSettings/ULES00223.ini
@@ -1,14 +1,14 @@
-﻿# ULUS10032, ULES00210, ULES00214, ULES00215, ULES00216 - Harry Potter and the Goblet of Fire™
+﻿# ULUS10063, ULES00223 - Prince of Persia - Revelations
 [VR]
 UnitsPerMetre = 1.000000
-HudThickness = 0.500000
+HudThickness = 0.000000
 HudDistance = 1.500000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
 MinFOV = 0.0
-ScreenHeight = 2.000000
-ScreenThickness = 0.500000
+ScreenHeight = 1.500000
+ScreenThickness = 0.000000
 ScreenDistance = 1.500000
 ScreenRight = 0.000000
 ScreenUp = 0.000000
@@ -23,12 +23,12 @@ Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
-ReadPitch = 0.000000
+ReadPitch = 0.0
 DetectSkybox = False
-DontDrawScreenSpace = False
+DontDrawScreenSpace = True
 Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 1
-VRIssues = Game is on HUD with doubled tracking
+VRStateId = 3
+VRIssues = seasickness, camera angles, flickering videos, culling
