--- a/Sys/GameSettings/ULES00567.ini
+++ b/Sys/GameSettings/ULES00567.ini
@@ -1,15 +1,15 @@
-﻿# ULUS10248, ULES00813 - SHReK the THiRD™
+﻿# ULES00601, ULUS10185, ULES00567 - Family Guy
 [VR]
-UnitsPerMetre = 0.5
-HudThickness = 0.1
+UnitsPerMetre = 1.0
+HudThickness = 0.5
 HudDistance = 1.5
-CameraForward = 1.0
-CameraPitch = 15.0
+CameraForward = 0.0
+CameraPitch = 10
 AimDistance = 7.0
 MinFOV = 0.0
-ScreenHeight = 2.0
-ScreenThickness = 0.1
-ScreenDistance = 2.0
+ScreenHeight = 1.0
+ScreenThickness = 0.5
+ScreenDistance = 1.5
 ScreenRight = 0.0
 ScreenUp = 0.0
 ScreenPitch = 0.0
@@ -21,19 +21,14 @@ MetroidPrime = 0
 HudOnTop = True
 Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
-DontClearScreen = False
-CanReadCameraAngles = False
+DontClearScreen = True
+CanReadCameraAngles = True
 ReadPitch = 0.0
 DetectSkybox = False
-DontDrawScreenSpace = True
+DontDrawScreenSpace = False
 Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
-VRStateID = 4
-VRIssues = camera angles
-
-[VRCheats]
-_C1 disable culling
-_L 0x202115F8 0x03E00008
-_L 0x202115FC 0x20020000
+VRStateId = 5
+VRIssues = imperfect depth layering in start screen
