--- a/Sys/GameSettings/ULES00601.ini
+++ b/Sys/GameSettings/ULES00601.ini
@@ -1,4 +1,4 @@
-﻿# ULES00601 - Family Guy
+﻿# ULES00601, ULUS10185, ULES00567 - Family Guy
 [VR]
 UnitsPerMetre = 1.0
 HudThickness = 0.5
@@ -6,6 +6,7 @@ HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 10
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 1.0
 ScreenThickness = 0.5
 ScreenDistance = 1.5
@@ -18,13 +19,17 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = True
 CanReadCameraAngles = True
 ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = False
+Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = 0
+CPUSpeed = 0
 VRStateId = 5
 VRIssues = imperfect depth layering in start screen
 
