--- a/Sys/GameSettings/ULES00813.ini
+++ b/Sys/GameSettings/ULES00813.ini
@@ -1,15 +1,15 @@
-﻿# ULUS10105, ULES00419, ULAS42073, ULAS42069 - Ultimate Ghosts'n Goblins
+﻿# ULUS10248, ULES00813 - SHReK the THiRD™
 [VR]
-UnitsPerMetre = 7.8
-HudThickness = 5.0
-HudDistance = 0.4
+UnitsPerMetre = 0.5
+HudThickness = 0.1
+HudDistance = 1.5
 CameraForward = 1.0
-CameraPitch = 0.0
+CameraPitch = 15.0
 AimDistance = 7.0
 MinFOV = 0.0
-ScreenHeight = 1.5
-ScreenThickness = 0.6
-ScreenDistance = 1.5
+ScreenHeight = 2.0
+ScreenThickness = 0.1
+ScreenDistance = 2.0
 ScreenRight = 0.0
 ScreenUp = 0.0
 ScreenPitch = 0.0
@@ -22,13 +22,13 @@ HudOnTop = True
 Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
 DontClearScreen = False
-CanReadCameraAngles = True
+CanReadCameraAngles = False
 ReadPitch = 0.0
-DetectSkybox = True
+DetectSkybox = False
 DontDrawScreenSpace = True
-Before3DIsBackground = True
+Before3DIsBackground = False
 OverrideClearColor = False
-BackgroundColor = -16777216
+BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 4
-VRIssues = 
+VRStateID = 3
+VRIssues = camera angles, culling
