--- a/Sys/GameSettings/ULUS10020.ini
+++ b/Sys/GameSettings/ULUS10020.ini
@@ -1,4 +1,4 @@
-﻿# ULUS10020 - GHOST IN THE SHELL STAND ALONE COMPLEX
+﻿# ULUS10020, ULES00135, ULES00153, UCAS40025 - GHOST IN THE SHELL STAND ALONE COMPLEX
 [VR]
 UnitsPerMetre = 83
 HudThickness = 0.1
@@ -6,6 +6,7 @@ HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 1.0
 ScreenThickness = 0.7
 ScreenDistance = 2.0
@@ -18,13 +19,17 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = True
 ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
+Before3DIsBackground = True
 OverrideClearColor = True
 BackgroundColor = 5260339
+CPUSpeed = 0
 VRStateId = 2
 VRIssues = vibrating HUD, culling
 
