--- a/Sys/GameSettings/ULUS10063.ini
+++ b/Sys/GameSettings/ULUS10063.ini
@@ -1,4 +1,4 @@
-﻿# ULUS10063 - Prince of Persia - Revelations
+﻿# ULUS10063, ULES00223 - Prince of Persia - Revelations
 [VR]
 UnitsPerMetre = 1.000000
 HudThickness = 0.000000
@@ -6,6 +6,7 @@ HudDistance = 1.500000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
+MinFOV = 0.0
 ScreenHeight = 1.500000
 ScreenThickness = 0.000000
 ScreenDistance = 1.500000
@@ -18,11 +19,17 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
 ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
+Before3DIsBackground = False
+OverrideClearColor = False
+BackgroundColor = 0
+CPUSpeed = 0
 VRStateId = 3
 VRIssues = seasickness, camera angles, flickering videos
 
