--- a/Sys/GameSettings/ULUS10325.ini
+++ b/Sys/GameSettings/ULUS10325.ini
@@ -6,6 +6,7 @@ HudDistance = 2.000000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
+MinFOV = 0.0
 ScreenHeight = 2.000000
 ScreenThickness = 0.500000
 ScreenDistance = 1.500000
@@ -18,9 +19,16 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
+ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = False
+Before3DIsBackground = False
+OverrideClearColor = False
+BackgroundColor = 0
+CPUSpeed = 0
 VRStateId = 3
 VRIssues = Some games (eg. Asteroids) don't work
