--- a/Sys/GameSettings/ULUS10405.ini
+++ b/Sys/GameSettings/ULUS10405.ini
@@ -6,6 +6,7 @@ HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 2.0
+MinFOV = 0.0
 ScreenHeight = 1.8
 ScreenThickness = 0.5
 ScreenDistance = 2.0
@@ -18,6 +19,8 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
 ReadPitch = 0.000000
