--- a/Sys/GameSettings/ULUS10431.ini
+++ b/Sys/GameSettings/ULUS10431.ini
@@ -6,6 +6,7 @@ HudDistance = 1.500000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
+MinFOV = 0.0
 ScreenHeight = 1.200000
 ScreenThickness = 1.000000
 ScreenDistance = 1.500000
