--- a/Sys/GameSettings/ULUS10451.ini
+++ b/Sys/GameSettings/ULUS10451.ini
@@ -1,4 +1,4 @@
-﻿# ULUS10451 - James Cameron's AVATAR™: THE GAME
+﻿# ULUS10451, NPEH00031, ULES01357 - James Cameron's AVATAR™: THE GAME
 [VR]
 UnitsPerMetre = 1.0
 HudThickness = 0.5
@@ -6,6 +6,7 @@ HudDistance = 2.0
 CameraForward = 1.0
 CameraPitch = 10.0
 AimDistance = 14.0
+MinFOV = 0.0
 ScreenHeight = 2.0
 ScreenThickness = 0.5
 ScreenDistance = 2.5
@@ -18,11 +19,17 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = True
 ReadPitch = 90.0
 DetectSkybox = False
 DontDrawScreenSpace = True
+Before3DIsBackground = False
+OverrideClearColor = False
+BackgroundColor = 0
+CPUSpeed = 0
 VRStateId = 4
 VRIssues = still has culling, camera motion, slowdowns
 
