--- a/Sys/GameSettings/ULUS10505.ini
+++ b/Sys/GameSettings/ULUS10505.ini
@@ -1,4 +1,4 @@
-﻿# ULUS10505 - KINGDOM HEARTS Birth by Sleep
+﻿# ULUS10505, ULES01441, ULJM05600, ULJM05775 - KINGDOM HEARTS Birth by Sleep
 [VR]
 UnitsPerMetre = 1.0
 HudThickness = 20.0
@@ -6,6 +6,7 @@ HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 1.5
 ScreenThickness = 0.0
 ScreenDistance = 1.5
@@ -18,6 +19,8 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = True
 CanReadCameraAngles = True
 ReadPitch = 0.0
@@ -26,6 +29,7 @@ DontDrawScreenSpace = True
 Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = 0
+CPUSpeed = 0
 VRStateId = 3
 VRIssues = near sky, z-fighting, invisible menu text
 
