--- a/Sys/GameSettings/ULES00643.ini
+++ b/Sys/GameSettings/ULES00643.ini
@@ -6,6 +6,7 @@ HudDistance = 2.2
 CameraForward = 0.1
 CameraPitch = 0.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 2.0
 ScreenThickness = 0.4
 ScreenDistance = 2.5
