--- a/Sys/GameSettings/ULES00644.ini
+++ b/Sys/GameSettings/ULES00644.ini
@@ -6,6 +6,7 @@ HudDistance = 2.2
 CameraForward = 0.1
 CameraPitch = 0.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 2.0
 ScreenThickness = 0.4
 ScreenDistance = 2.5
@@ -27,7 +28,7 @@ DetectSkybox = False
 DontDrawScreenSpace = False
 Before3DIsBackground = True
 OverrideClearColor = False
-BackgroundColor = -16777216
+BackgroundColor = 0
 CPUSpeed = 0
 VRStateId = 2
 VRIssues = Black terrain
