--- a/Sys/GameSettings/ULES01505.ini
+++ b/Sys/GameSettings/ULES01505.ini
@@ -6,6 +6,7 @@ HudDistance = 2.0
 CameraForward = 0.0
 CameraPitch = 15.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 1.5
 ScreenThickness = 0.12
 ScreenDistance = 1.4
