--- a/Sys/GameSettings/ULJM05571.ini
+++ b/Sys/GameSettings/ULJM05571.ini
@@ -1,14 +1,14 @@
-﻿# ULUS10105, ULES00419, ULAS42073, ULAS42069 - Ultimate Ghosts'n Goblins
+﻿# ULUS10455, ULES01367, ULJM05571 - Assassin's Creed: Bloodlines™
 [VR]
-UnitsPerMetre = 7.8
-HudThickness = 5.0
-HudDistance = 0.4
-CameraForward = 1.0
+UnitsPerMetre = 1.0
+HudThickness = 0.10
+HudDistance = 1.4
+CameraForward = 0.1
 CameraPitch = 0.0
 AimDistance = 7.0
 MinFOV = 0.0
 ScreenHeight = 1.5
-ScreenThickness = 0.6
+ScreenThickness = 0.5
 ScreenDistance = 1.5
 ScreenRight = 0.0
 ScreenUp = 0.0
@@ -18,17 +18,17 @@ Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
-HudOnTop = True
+HudOnTop = False
 Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
 DontClearScreen = False
-CanReadCameraAngles = True
+CanReadCameraAngles = False
 ReadPitch = 0.0
-DetectSkybox = True
+DetectSkybox = False
 DontDrawScreenSpace = True
 Before3DIsBackground = True
 OverrideClearColor = False
-BackgroundColor = -16777216
+BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 4
-VRIssues = 
+VRStateId = 3
+VRIssues = HUD makes things 2D
