--- a/Sys/GameSettings/ULJM05600.ini
+++ b/Sys/GameSettings/ULJM05600.ini
@@ -1,14 +1,14 @@
-﻿# ULUS10105, ULES00419, ULAS42073, ULAS42069 - Ultimate Ghosts'n Goblins
+﻿# ULUS10505, ULES01441, ULJM05600, ULJM05775 - KINGDOM HEARTS Birth by Sleep
 [VR]
-UnitsPerMetre = 7.8
-HudThickness = 5.0
-HudDistance = 0.4
-CameraForward = 1.0
+UnitsPerMetre = 1.0
+HudThickness = 20.0
+HudDistance = 1.5
+CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
 MinFOV = 0.0
 ScreenHeight = 1.5
-ScreenThickness = 0.6
+ScreenThickness = 0.0
 ScreenDistance = 1.5
 ScreenRight = 0.0
 ScreenUp = 0.0
@@ -21,14 +21,14 @@ MetroidPrime = 0
 HudOnTop = True
 Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
-DontClearScreen = False
+DontClearScreen = True
 CanReadCameraAngles = True
 ReadPitch = 0.0
-DetectSkybox = True
+DetectSkybox = False
 DontDrawScreenSpace = True
 Before3DIsBackground = True
 OverrideClearColor = False
-BackgroundColor = -16777216
+BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 4
-VRIssues = 
+VRStateId = 3
+VRIssues = near sky, z-fighting, invisible menu text
