--- a/Sys/GameSettings/ULJM05643.ini
+++ b/Sys/GameSettings/ULJM05643.ini
@@ -1,14 +1,14 @@
-﻿# ULUS10105, ULES00419, ULAS42073, ULAS42069 - Ultimate Ghosts'n Goblins
+﻿# ULUS10472, NPEH90028, NPUH90067, ULES01381, ULJM05643 - Army of TWO™: The 40th Day
 [VR]
-UnitsPerMetre = 7.8
-HudThickness = 5.0
-HudDistance = 0.4
-CameraForward = 1.0
+UnitsPerMetre = 128.0
+HudThickness = 0.5
+HudDistance = 1.5
+CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
 MinFOV = 0.0
-ScreenHeight = 1.5
-ScreenThickness = 0.6
+ScreenHeight = 2.0
+ScreenThickness = 0.5
 ScreenDistance = 1.5
 ScreenRight = 0.0
 ScreenUp = 0.0
@@ -23,12 +23,12 @@ Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = True
-ReadPitch = 0.0
-DetectSkybox = True
+ReadPitch = -90.0
+DetectSkybox = False
 DontDrawScreenSpace = True
-Before3DIsBackground = True
+Before3DIsBackground = False
 OverrideClearColor = False
-BackgroundColor = -16777216
+BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 4
-VRIssues = 
+VRStateId = 3
+VRIssues = Flickering HUD and background, camera too far, culling
