--- a/Sys/GameSettings/ULUS10057.ini
+++ b/Sys/GameSettings/ULUS10057.ini
@@ -6,6 +6,7 @@ HudDistance = 1.500000
 CameraForward = 0.000000
 CameraPitch = 0.000000
 AimDistance = 7.000000
+MinFOV = 0.0
 ScreenHeight = 4.000000
 ScreenThickness = 1.000000
 ScreenDistance = 4.000000
@@ -18,6 +19,8 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
 ReadPitch = 0.000000
