--- a/Sys/GameSettings/ULUS10455.ini
+++ b/Sys/GameSettings/ULUS10455.ini
@@ -1,4 +1,4 @@
-﻿# ULUS10455 - Assassin's Creed: Bloodlines™
+﻿# ULUS10455, ULES01367, ULJM05571 - Assassin's Creed: Bloodlines™
 [VR]
 UnitsPerMetre = 1.0
 HudThickness = 0.10
@@ -6,6 +6,7 @@ HudDistance = 1.4
 CameraForward = 0.1
 CameraPitch = 0.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 1.5
 ScreenThickness = 0.5
 ScreenDistance = 1.5
@@ -18,6 +19,8 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = False
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = False
 ReadPitch = 0.0
@@ -26,6 +29,7 @@ DontDrawScreenSpace = True
 Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = 0
+CPUSpeed = 0
 VRStateId = 3
 VRIssues = HUD makes things 2D
 
