--- a/Sys/GameSettings/ULUS10472.ini
+++ b/Sys/GameSettings/ULUS10472.ini
@@ -1,4 +1,4 @@
-﻿# ULUS10472 - Army of TWO™: The 40th Day
+﻿# ULUS10472, NPEH90028, NPUH90067, ULES01381, ULJM05643 - Army of TWO™: The 40th Day
 [VR]
 UnitsPerMetre = 128.0
 HudThickness = 0.5
@@ -6,6 +6,7 @@ HudDistance = 1.5
 CameraForward = 0.0
 CameraPitch = 0.0
 AimDistance = 7.0
+MinFOV = 0.0
 ScreenHeight = 2.0
 ScreenThickness = 0.5
 ScreenDistance = 1.5
@@ -18,11 +19,17 @@ HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
+Invert2DOrthoDepth = False
+Invert2DThroughDepth = False
 DontClearScreen = False
 CanReadCameraAngles = True
 ReadPitch = -90.0
 DetectSkybox = False
 DontDrawScreenSpace = True
+Before3DIsBackground = False
+OverrideClearColor = False
+BackgroundColor = 0
+CPUSpeed = 0
 VRStateId = 3
 VRIssues = Flickering HUD and background, camera too far, can see backstage
 
