Some regions don't have culling codes, so add culling as an issue.

--- a/Sys/GameSettings/ULES00567.ini
+++ b/Sys/GameSettings/ULES00567.ini
@@ -30,5 +30,5 @@ Before3DIsBackground = False
 OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 5
-VRIssues = imperfect depth layering in start screen
+VRStateId = 4
+VRIssues = imperfect depth layering in start screen, culling
