--- a/Sys/GameSettings/ULUS10185.ini
+++ b/Sys/GameSettings/ULUS10185.ini
@@ -31,4 +31,4 @@ OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
 VRStateId = 5
-VRIssues = imperfect depth layering in start screen
+VRIssues = imperfect depth layering in start screen, culling
