--- a/Sys/GameSettings/ULJM05156.ini
+++ b/Sys/GameSettings/ULJM05156.ini
@@ -2,10 +2,10 @@
 [VR]
 UnitsPerMetre = 100.0
 HudThickness = 0.5
-HudDistance = 2.0
-CameraForward = 1.0
+HudDistance = 1.0
+CameraForward = 0.0
 CameraPitch = 0.0
-AimDistance = 0.5
+AimDistance = 7.0
 MinFOV = 0.0
 ScreenHeight = 1.7
 ScreenThickness = 0.5
@@ -26,9 +26,9 @@ CanReadCameraAngles = True
 ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = False
-Before3DIsBackground = False
+Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 2
-VRIssues = only see world through HUD or mountains, vibrating 2D screen, cinematics stuck to top left corner of head
+VRStateId = 3
+VRIssues = vibrating 2D screen, cinematics stuck to top left corner of head
