Daxter is now playable. Lego Batman is improved but still unplayable. Soul Calibur Broken Destiny is good.

--- a/Sys/GameSettings/ULES01298.ini
+++ b/Sys/GameSettings/ULES01298.ini
@@ -1,17 +1,17 @@
-﻿# UCUS98618, UCUS98654, UCES00044 - Daxter
+﻿# ULES01298 - SOULCALIBUR: Broken Destiny
 [VR]
-UnitsPerMetre = 2.0
-HudThickness = 500.0
-HudDistance = 500.0
-CameraForward = -8.0
-CameraPitch = 15.0
-AimDistance = 500.0
+UnitsPerMetre = 1.0
+HudThickness = 0.5
+HudDistance = 2.5
+CameraForward = 0.0
+CameraPitch = 0.0
+AimDistance = 8.0
 MinFOV = 0.0
-ScreenHeight = 1.5
-ScreenThickness = 0.5
-ScreenDistance = 1.5
+ScreenHeight = 2.5
+ScreenThickness = 0.3
+ScreenDistance = 2.2
 ScreenRight = 0.0
-ScreenUp = 0.0
+ScreenUp = -0.18
 ScreenPitch = 0.0
 TelescopeMaxFOV = 0.0
 Disable3D = False
@@ -20,7 +20,7 @@ TelescopeEye = 0
 MetroidPrime = 0
 HudOnTop = True
 Invert2DOrthoDepth = False
-Invert2DThroughDepth = False
+Invert2DThroughDepth = True
 DontClearScreen = False
 CanReadCameraAngles = True
 ReadPitch = 0.0
@@ -30,5 +30,5 @@ Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 3
-VRIssues = near skybox, distant HUD, intros in top left, culling
+VRStateId = 4
+VRIssues = culling, noise below intro videos
