--- a/Sys/GameSettings/UCUS98618.ini
+++ b/Sys/GameSettings/UCUS98618.ini
@@ -1,34 +1,34 @@
 ﻿# UCUS98618, UCUS98654, UCES00044 - Daxter
 [VR]
-UnitsPerMetre = 1.000000
-HudThickness = 0.500000
-HudDistance = 1.500000
-CameraForward = 0.000000
-CameraPitch = 0.000000
-AimDistance = 7.000000
+UnitsPerMetre = 2.0
+HudThickness = 500.0
+HudDistance = 500.0
+CameraForward = -8.0
+CameraPitch = 15.0
+AimDistance = 500.0
 MinFOV = 0.0
-ScreenHeight = 1.500000
-ScreenThickness = 0.500000
-ScreenDistance = 1.500000
-ScreenRight = 0.000000
-ScreenUp = 0.000000
-ScreenPitch = 0.000000
-TelescopeMaxFOV = 0.000000
+ScreenHeight = 1.5
+ScreenThickness = 0.5
+ScreenDistance = 1.5
+ScreenRight = 0.0
+ScreenUp = 0.0
+ScreenPitch = 0.0
+TelescopeMaxFOV = 0.0
 Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
-HudOnTop = False
+HudOnTop = True
 Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
 DontClearScreen = False
-CanReadCameraAngles = False
+CanReadCameraAngles = True
 ReadPitch = 0.0
 DetectSkybox = False
-DontDrawScreenSpace = False
-Before3DIsBackground = False
+DontDrawScreenSpace = True
+Before3DIsBackground = True
 OverrideClearColor = False
-BackgroundColor = -16777216
+BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 1
-VRIssues = Can't see anything in-game, intros in top left
+VRStateId = 3
+VRIssues = near skybox, distant HUD, intros in top left, culling
