--- a/Sys/GameSettings/ULUS10380.ini
+++ b/Sys/GameSettings/ULUS10380.ini
@@ -1,10 +1,10 @@
 ﻿# ULES01151, ULUS10380, NPUH90019 - LEGO® Batman™: The Videogame
 [VR]
-UnitsPerMetre = 0.950000
+UnitsPerMetre = 1.0
 HudThickness = 0.500000
-HudDistance = 1.500000
+HudDistance = 0.500000
 CameraForward = 0.000000
-CameraPitch = 50.000000
+CameraPitch = 0.000000
 AimDistance = 7.000000
 MinFOV = 0.0
 ScreenHeight = 2.000000
@@ -26,9 +26,9 @@ CanReadCameraAngles = False
 ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
-Before3DIsBackground = False
+Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
 VRStateId = 1
-VRIssues = Black
+VRIssues = rendered on a screen as a screenspace effect
