Me and My Catamari culling codes, and Crush.

--- a/Sys/GameSettings/ULES00339.ini
+++ b/Sys/GameSettings/ULES00339.ini
@@ -30,5 +30,15 @@ Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 2
-VRIssues = terrible culling, stuff on HUD, HUD depth issues
+VRStateId = 3
+VRIssues = culling, stuff on HUD, HUD depth issues
+
+[VRCheats]
+_C1 disable floor culling
+_L 0x2004534C 0x00000000
+_C0 disable floor culling 2
+_L 0x20045278 0x00000000
+_L 0x2004527C 0x00000000
+_C0 disable floor culling 3
+_L 0x200340c4 0x03E00008
+_L 0x200340c8 0x20020000
