Metal Gear Acid, Metal Gear Solid Peace Walker, Metal Gear Solid Digital Graphic Novel

--- a/Sys/GameSettings/ULAS42007.ini
+++ b/Sys/GameSettings/ULAS42007.ini
@@ -1,14 +1,15 @@
-﻿# NPJH50045, NPEH90023, ULUS10509, ULES01372 - METAL GEAR SOLID PEACE WALKER
+﻿# ULES00008, ULUS10006, ULAS42007, ULJM05001, ULJM08001 - METAL GEAR ACID
 [VR]
 UnitsPerMetre = 1000.0
-HudThickness = 0.3
-HudDistance = 0.3
+HudThickness = 0.03
+HudDistance = 1.0
 CameraForward = 0.0
-CameraPitch = 0.0
+CameraPitch = 25.0
 AimDistance = 7.0
+MinFOV = 20.0
 ScreenHeight = 2.0
-ScreenThickness = 0.5
-ScreenDistance = 1.5
+ScreenThickness = 0.1
+ScreenDistance = 2.0
 ScreenRight = 0.0
 ScreenUp = 0.0
 ScreenPitch = 0.0
@@ -17,7 +18,7 @@ Disable3D = False
 HudFullscreen = False
 TelescopeEye = 0
 MetroidPrime = 0
-HudOnTop = True
+HudOnTop = False
 Invert2DOrthoDepth = False
 Invert2DThroughDepth = False
 DontClearScreen = False
@@ -25,9 +26,9 @@ CanReadCameraAngles = True
 ReadPitch = 0.0
 DetectSkybox = False
 DontDrawScreenSpace = True
-Before3DIsBackground = False
+Before3DIsBackground = True
 OverrideClearColor = False
 BackgroundColor = 0
 CPUSpeed = 0
-VRStateId = 2
-VRIssues = HUD makes things 2D, culling, rain effects
+VRStateId = 4
+VRIssues = z-fighting, minor culling
